--- a/imdex.html
+++ b/imdex.html
@@ -290,8 +290,42 @@
                     <li class="chevron"><i class="fa-solid fa-chevron-up"></i></li>
                 </ul>
             </div>
-            <div class="nav-bar">
-
+            <div class="nav-bar footer-flex">
+                <ul class="c-w">
+                    <li>
+                        <div class="icon"><i class="fa-solid fa-user-plus"></i></div>
+                        <span>Invite</span>
+                    </li>
+                    <li>
+                        <div class="icon"><i class="fa-solid fa-user-group"></i></div>
+                        <span>Manage partecipants</span>
+                    </li>
+                    <li>
+                        <div class="icon"><i class="fa-solid fa-chart-column"></i></div>
+                        <span>Polling</span>
+                    </li>
+                    <li>
+                        <div class="icon c-g"><i class="fa-solid fa-share-from-square"></i></div>
+                        <span>Share screen</span>
+                    </li>
+                    <li class="chevron"><i class="fa-solid fa-chevron-up"></i></li>
+                    <li>
+                        <div class="icon"><i class="fa-solid fa-comment"></i></div>
+                        <span>Chat</span>
+                    </li>
+                    <li>
+                        <div class="icon"><i class="fa-solid fa-record-vinyl"></i></div>
+                        <span>Record</span>
+                    </li>
+                    <li>
+                        <div class="icon"><i class="fa-solid fa-table-cells-large"></i></div>
+                        <span>Breakout rooms</span>
+                    </li>
+                    <li>
+                        <div class="icon"><i class="fa-solid fa-ellipsis"></i></div>
+                        <span>More</span>
+                    </li>
+                </ul>
             </div>
             <div class="end-meeting footer-flex">
                 End meeting
