add: top-right settings

--- a/imdex.html
+++ b/imdex.html
@@ -14,6 +14,10 @@
 <body>
     <!-- main -->
     <main>
+        <ul class="flex c-w">
+            <li><i class="fa-solid fa-table-cells"></i> Speaker view</li>
+            <li><i class="fa-solid fa-maximize"></i></li>
+        </ul>
         <div class="container">
             <div class="user">
                 <div class="webcam">
@@ -275,8 +279,8 @@
 
     <!-- footer -->
     <footer>
-        <div class="footer-flex">
-            <div class="video-settings footer-flex">
+        <div class="flex">
+            <div class="video-settings flex">
                 <ul class="c-w">
                     <li>
                         <div class="icon"><i class="fa-solid fa-microphone"></i></div>
@@ -290,7 +294,7 @@
                     <li class="chevron"><i class="fa-solid fa-chevron-up"></i></li>
                 </ul>
             </div>
-            <div class="nav-bar footer-flex">
+            <div class="nav-bar flex">
                 <ul class="c-w">
                     <li>
                         <div class="icon"><i class="fa-solid fa-user-plus"></i></div>
@@ -327,7 +331,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="end-meeting footer-flex">
+            <div class="end-meeting flex">
                 End meeting
             </div>   
         </div>
