--- a/imdex.html
+++ b/imdex.html
@@ -12,12 +12,19 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <!-- main -->
-    <main>
-        <ul class="flex c-w">
+
+    <!-- header -->
+    <header>
+         <ul class="flex c-w">
             <li><i class="fa-solid fa-table-cells"></i> Speaker view</li>
             <li><i class="fa-solid fa-maximize"></i></li>
         </ul>
+    </header>
+    <!-- /header -->
+    
+    <!-- main -->
+    <main>
+       
         <div class="container">
             <div class="user">
                 <div class="webcam">
